# TeleFuser

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README_zh.md  mkdocs.yml  pyproject.toml  推文-TeleFuser-0529.docx
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  roadmap.yml
.github/workflows/: lint.yml  release-testpypi.yml  server-test.yml  test.yml
benchmarks/feature_cache/: README.md  analyze_residual_taylor_error.py  wan21_1_3b_ada_taylor_cache.py
benchmarks/kernel/: bench_rmsnorm.py  bench_rotary.py  bench_scale_shift.py  run_benchmarks.sh
benchmarks/telefuser_aiperf/: benchmark_contract.yaml  stream_benchmark_contract.yaml
docs/: README.md  README_zh.md
docs/en/: adding_new_example.md  adding_new_model.md  adding_new_stage.md  attention.md  benchmark_aiperf.md  configuration.md  feature_cache.md  hash_config_management.md  index.md  latent_cache.md  logging.md  metrics.md  model_loading.md  offload.md  ops.md  parallel.md  profiler.md  service.md  service_metadata.md  stream_scheduler.md  stream_server.md  testing.md  torch_compile_compatibility.md
docs/zh/: adding_new_example.md  adding_new_model.md  adding_new_stage.md  attention.md  benchmark_aiperf.md  benchmark_aiperf_design.md  configuration.md  feature_cache.md  index.md  ops.md  (+14 more)
examples/: README.md  example_config.yaml  run_examples.py
scripts/: build_latent_dataset.py  run_ci_tests.sh  run_regression_test.sh  setup_aiperf_repo.sh
telefuser/: __init__.py  service_types.py
tests/: conftest.py
tf-kernel/: .clang-format  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Makefile  README.md  README_zh.md  analyze_whl_kernel_sizes.py  build.sh  pyproject.toml  pytest.ini  rename_wheels.sh
tf-kernel/.github/: PULL_REQUEST_TEMPLATE.md
tf-kernel/.github/ISSUE_TEMPLATE/: feature_request.yml
tf-kernel/.github/workflows/: docs.yml  lint.yml
tf-kernel/benchmark/: bench_activation.py  bench_fp4_gemm.py  bench_fp8_gemm.py  bench_int8_gemm.py  bench_nvfp4_scaled_gemm.py  bench_per_tensor_quant_fp8.py  bench_rmsnorm.py  bench_sageattn2.py
tf-kernel/cmake/: detect_gpu.cmake
tf-kernel/csrc/: common_extension.cc
tf-kernel/csrc/block_sparse_attn/: block_sparse_attn_api.h  flash_api.cpp
tf-kernel/csrc/block_sparse_attn/src/: alibi.h  block_info.h  flash.h  flash_blockmask.h  flash_bwd_block_hdim128_bf16_causal_sm80.cu  flash_bwd_block_hdim128_bf16_sm80.cu  flash_bwd_block_hdim128_fp16_causal_sm80.cu  flash_bwd_block_hdim128_fp16_sm80.cu  flash_bwd_block_hdim32_bf16_causal_sm80.cu  flash_bwd_block_hdim32_bf16_sm80.cu  flash_bwd_block_hdim32_fp16_causal_sm80.cu  flash_bwd_block_hdim32_fp16_sm80.cu  flash_bwd_block_hdim64_bf16_causal_sm80.cu  flash_bwd_block_hdim64_bf16_sm80.cu  flash_bwd_block_hdim64_fp16_causal_sm80.cu  flash_bwd_block_hdim64_fp16_sm80.cu  flash_bwd_kernel.h  flash_bwd_launch_template.h  flash_fwd_block_hdim128_bf16_causal_sm80.cu  flash_fwd_block_hdim128_bf16_sm80.cu  flash_fwd_block_hdim128_fp16_causal_sm80.cu  flash_fwd_block_hdim128_fp16_sm80.cu  flash_fwd_block_hdim32_bf16_causal_sm80.cu  flash_fwd_block_hdim32_bf16_sm80.cu  flash_fwd_block_hdim32_fp16_causal_sm80.cu  flash_fwd_block_hdim32_fp16_sm80.cu  flash_fwd_block_hdim64_bf16_causal_sm80.cu  flash_fwd_block_hdim64_bf16_sm80.cu  flash_fwd_block_hdim64_fp16_causal_sm80.cu  flash_fwd_block_hdim64_fp16_sm80.cu  flash_fwd_kernel.h  flash_fwd_launch_template.h  kernel_traits.h  kernel_traits_sm90.h  namespace_config.h  philox.cuh  softmax.h  static_switch.h  utils.h
tf-kernel/csrc/elementwise/: activation.cu  fused_add_rms_norm_kernel.cu  pos_enc.cu  pos_enc.cuh  topk.cu
tf-kernel/csrc/gemm/: per_tensor_quant_fp8.cu  per_token_group_quant_8bit.cu  per_token_group_quant_8bit_v2.cu  per_token_quant_fp8.cu
tf-kernel/csrc/sageattn2/: cp_async.cuh  dispatch_utils.h  math.cuh  mma.cuh  numeric_conversion.cuh  permuted_smem.cuh  reduction_utils.cuh  utils.cuh  wgmma.cuh
tf-kernel/csrc/sageattn2/fused/: fused.cu  fused.h
tf-kernel/csrc/sageattn2/qattn/: attn_cuda_sm80.h  attn_cuda_sm89.h  attn_cuda_sm90.h  attn_utils.cuh  qk_int_sv_f16_cuda_sm80.cu  qk_int_sv_f8_cuda_sm89.cuh  qk_int_sv_f8_cuda_sm90.cu  sm89_qk_int8_sv_f8_accum_f16_attn_inst_buf.cu  sm89_qk_int8_sv_f8_accum_f16_fuse_v_scale_attn_inst_buf.cu  sm89_qk_int8_sv_f8_accum_f32_attn.cu  sm89_qk_int8_sv_f8_accum_f32_attn_inst_buf.cu  sm89_qk_int8_sv_f8_accum_f32_fuse_v_scale_attn.cu  sm89_qk_int8_sv_f8_accum_f32_fuse_v_scale_attn_inst_buf.cu  sm89_qk_int8_sv_f8_accum_f32_fuse_v_scale_fuse_v_mean_attn.cu
tf-kernel/csrc/sageattn3/: __init__.py  api.h  api.py
tf-kernel/csrc/sageattn3/blackwell/: api.cu  block_info.h  blockscaled_layout.h  cute_extension.h  epilogue_tma_ws.h  kernel_traits.h  kernel_ws.h  launch.h  mainloop_tma_ws.h  named_barrier.h  params.h  softmax_fused.h  static_switch.h  tile_scheduler.h  utils.h
tf-kernel/csrc/sageattn3/quantization/: cuda_utils.h  fp4_quantization_4d.cu
tf-kernel/docs/: Makefile
tf-kernel/docs/source/: conf.py  contributing.rst  development.rst  index.rst  installation.rst  quickstart.rst
tf-kernel/docs/source/api/: attention.rst  elementwise.rst  gemm.rst  index.rst
tf-kernel/include/: scalar_type.hpp  tf_kernel_ops.h  utils.h
tf-kernel/scripts/: check_wheel_symbols.py
tf-kernel/tests/: test_activation.py  test_block_sparse_attn.py  test_block_sparse_attn_simple.py  test_bmm_fp8.py  test_copy.py  test_fp4_gemm.py  test_fp4_quantize.py  test_fp8_blockwise_gemm.py  test_fp8_gemm.py  test_int8_gemm.py  test_norm.py  test_sageattn2.py  test_sageattn3.py  utils.py
tf-kernel/tf_kernel/: __init__.py  block_sparse_attn.py  elementwise.py  gemm.py  load_utils.py  memory.py  sageattn2.py  sageattn3.py  sampling.py
tf-kernel/tf_kernel/testing/: rotary_embedding.py
tf-kernel/tf_kernel/triton/: attn_qk_int8_block_varlen.py  attn_qk_int8_per_block.py  attn_qk_int8_per_block_causal.py  attn_qk_int8_per_block_causal_varlen.py  quant_per_thread.py
webui/: stream_app.py
(+475 files in other folders)
