[build-system]
requires = [
  "scikit-build-core>=0.10",
  "torch>=2.8.0",
  "wheel",
  "setuptools-scm>=8.0",
]
build-backend = "scikit_build_core.build"

[project]
name = "tf-kernel"
dynamic = ["version"]
authors = []
description = "Kernel Library for TeleFuser"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Environment :: GPU :: NVIDIA CUDA"
]
dependencies = []

[project.optional-dependencies]
dev = [
  "tf-kernel[test,docs,lint]",
]
test = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
]
docs = [
  "sphinx>=7.0",
  "sphinx-rtd-theme>=2.0",
  "sphinx-autodoc-typehints>=1.25",
]
lint = [
  "pre-commit>=3.0",
  "isort>=5.13",
  # "black>=24.0",  # Disabled
  "ruff>=0.3.0",
  # "codespell>=2.2",  # Disabled
  "clang-format>=18.0",
]

[tool.setuptools-scm]
# Use git tags for version generation
# Tags should follow semantic versioning, e.g., v0.1.0

[tool.wheel]
exclude = [
  "dist*",
  "tests*",
]

[tool.scikit-build]
cmake.build-type = "Release"
minimum-version = "build-system.requires"

wheel.py-api = "cp310"
wheel.license-files = []
wheel.packages = ["tf_kernel"]

# Use setuptools-scm for dynamic version generation
# See: https://scikit-build-core.readthedocs.io/en/latest/configuration.html#dynamic-metadata
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "--strict-markers",
  "--strict-config",
  "--verbose",
  "--tb=short",
]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "gpu: marks tests that require GPU (deselect with '-m \"not gpu\"')",
  "sm80: marks tests that require SM80+ GPU",
  "sm90: marks tests that require SM90+ GPU",
  "sm100: marks tests that require SM100+ GPU (Blackwell)",
]

[tool.coverage.run]
source = ["tf_kernel"]
omit = [
  "*/tests/*",
  "*/test_*",
  "tf_kernel/sm80/*",
  "tf_kernel/sm90/*",
  "tf_kernel/sm100/*",
  "tf_kernel/block_sparse_attn_shared.so",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug:",
  "if settings.DEBUG",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
]
fail_under = 0
show_missing = true
skip_covered = false
